--- a/html/condicionales.html
+++ b/html/condicionales.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../scripts/funciones.js"></script>
 </head>
 <body>
-    <h1>JS 03 FUNCIONES</h1>
-    
-    
+    <h1>JS 03 Condicionales</h1>
+    <script src="../scripts/condicionales.js"></script>
 </body>
 </html>
